самолетики туда и обратно
JS- setTimeout

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <div class="mountains">
+
         <div class="fly"><img src="flyjet.png" id="fly"></div> 
+        <div class="fly2"><img src="fly2.png" id="fly"></div> 
+
         <img src="mountains.png" class="m1">
         <img src="mountains.png" class="m2">
     </div>
